# actions-test

./: .dockerignore  0001-Try-to-fix-build-deps.patch  CMakeLists.txt  Dockerfile  Dockerfile.cross  Dockerfile.cross-linux  Dockerfile.dev  Dockerfile.pgo  Dockerfile.profile  Dockerfile.stage1  Dockerfile.stage2  Dockerfile.system-clang  Dockerfile.toolchain  README.md  autoupdate.py  build-all.sh  build-compiler-rt.sh  build-cross-tools.sh  build-libcxx.sh  build-libssp.sh  build-lldb-mi.sh  build-llvm.sh  build-make.sh  build-mingw-w64-libraries.sh  build-mingw-w64-tools.sh  build-mingw-w64.sh  build-musl.sh  build-openmp.sh  build-pgo.sh  build-pgo2.sh  build-python.sh  clang-target-wrapper.c  configure  cpuinfo.c  install-linux-headers.sh  install-wrappers.sh  lldb-test-script  meson.build  meson_options.txt  multistage.sh  (+9 more)
.github/workflows/: build-all.yml  build.yml  cache-llvm-mingw.yml  docker.yml  ffmpeg.yml  github-actions-demo.yml  mpv.yml  msvcrt.yml  msys2.yml  projects.yml  release.yml  store-version.sh  test-libcxx.yml  test-llvm.yml  test.yml  tests.yml  upload-artifacts.yml
cmake/: config.h  config_components.h
ffmpeg/: PKGBUILD
fftools/: CMakeLists.txt
libavcodec/: CMakeLists.txt
libavdevice/: CMakeLists.txt
libavfilter/: CMakeLists.txt
libavformat/: CMakeLists.txt
libavutil/: CMakeLists.txt
libavutil/tests/: CMakeLists.txt
libplacebo-dev/: PKGBUILD
libpostproc/: CMakeLists.txt
libswresample/: CMakeLists.txt
libswscale/: CMakeLists.txt
llvm-mingw/: build-all.sh  build-llvm.sh  run-tests.sh
mpv/: PKGBUILD
patches/: 0001-libcxx-test-Mark-the-libcxx-selftest-remote-substitu.patch  0002-WIP-libcxx-Try-to-improve-the-tolerances-in-some-thr.patch
patches/llvm-mingw/: 0001-test-Add-tests-for-tchar.h-routines.patch
patches/llvm-project/: 0001-Add-missing-dllexport-of-__kmpc_omp_taskwait_51.patch  0001-CodeGen-ARM64EC-Add-support-for-hybrid_patchable-att.patch  0001-OpenMP-Add-a-missing-dllexport-for-the-new-function-.patch  0001-Reapply-openmp-test-XFAIL-many-microtask-args.c-on-A.patch  0001-WIP-Try-to-debug-the-cin.sh.cpp-test.patch  0001-compiler-rt-asan-test-Fix-lit-test-config-on-MinGW.patch  0001-compiler-rt-test-asan-Skip-the-static-asan-testsuite.patch  0001-compiler-rt-test-builtins-Set-__COMPAT_LAYER-RunAsIn.patch  0001-compiler-rt-test-ubsan-Mark-failing-tests-as-unsuppo.patch  0001-https-reviews.llvm.org-file-data-ssehtice4a4tlv2xxej.patch  0001-libcxx-ci-Run-the-libcxxabi-and-libunwind-tests-in-m.patch  0001-libcxx-test-Add-a-test-parameter-for-disabling-memor.patch  0001-libcxxabi-libunwind-test-Place-output-from-tests-und.patch  0001-libcxxabi-test-Fix-the-mingw-test-config.patch  0001-libunwind-SEH-Allow-setting-getting-the-register-UNW.patch  0001-lli-Export-the-MinGW-chkstk-function-from-the-lli-ex.patch  0001-openmp-Fix-building-in-debug-mode-with-mingw.patch  0001-test-MCJIT-Don-t-overwrite-config.unsupported-to-Fal.patch  0002-Add-__kmpc_fork_call_if-to-dllexports.patch  0002-Reapply-test-llvm-config-Assume-unix-style-lib-names.patch  0002-asan-test-Fix-TestCases-alloca_-ptr-to-long-cast-on-.patch  0002-asan-test-win-Set-__COMPAT_LAYER-RunAsInvoker-when-r.patch  0002-clang-ARM64EC-Add-support-for-hybrid_patchable-attri.patch  0002-compiler-rt-test-builtins-Set-__COMPAT_LAYER-RunAsIn.patch  0002-compiler-rt-test-profile-Avoid-issues-with-an-implic.patch  0002-libcxx-test-Check-for-C-headers-before-building-a-te.patch  0002-libcxx-test-Print-the-failing-commands-in-Configurat.patch  0002-libcxxabi-libunwind-test-Quote-the-python-path-prope.patch  0002-libcxxabi-test-Mark-code-following-an-assert-false-a.patch  0002-libunwind-SEH-Initialize-_msContext-with-RtlCaptureC.patch  0002-openmp-Only-try-to-add-the-mrtm-flag-on-i386-x86_64.patch  0002-test-ExecutionEngine-Skip-the-ExecutionEngine-tests-.patch  0003-Reapply-clang-test-Narrow-down-MSVC-specific-behavio.patch  0003-asan-test-Fix-tests-or-mark-XFAIL-for-MinGW-target.patch  0003-asan-test-win-Set-__COMPAT_LAYER-RunAsInvoker-when-r.patch  0003-clang-test-Narrow-down-MSVC-specific-behaviours-from.patch  0003-compiler-rt-asan-Add-report-on-intercept-fail-to-mor.patch  0003-libcxx-test-Check-for-C-headers-before-building-a-te.patch  0003-libcxxabi-test-Fix-the-mingw-test-config.patch  0003-libcxxabi-test-Use-the-correct-printf-formats-for-pr.patch  (+211 more)
patches/mingw-w64/: 0001-gdtoa-Sync-to-match-the-latest-version-at-netlib.org.patch  0001-headers-Define-ARM64EC-target-identification-macros.patch  0001-headers-Implement-the-__fastfail-intrinsic.patch  0002-fix-bug-in-upstream-gdtoa-nan-double-byte-ordering.patch  0002-headers-Only-expose-mempcpy-if-_GNU_SOURCE-is-define.patch  0002-headers-Use-the-aarch64-asm-variant-for-debug-breaks.patch  0003-crt-Implement-a-subset-of-libssp-functions-in-libmin.patch  0003-headers-Use-the-aarch64-asm-variant-for-__prefetch-o.patch  0004-crt-Regenerate-Makefile.in.patch  0004-headers-Use-aarch64-intrinsic-implementations-for-AR.patch  0005-crt-Provide-the-stack-protector-functions-variables-.patch  0005-headers-Commonize-_UNWIND_HISTORY_TABLE-structure-de.patch  0006-crt-Regenerate-Makefile.in.patch  0006-headers-Expose-the-ARM64-CONTEXT-structure-to-all-bu.patch  0007-RFC-crt-Implement-the-rest-of-the-libssp-functions.patch  0007-headers-Add-ARM64EC-context-structures.patch  0008-crt-Regenerate-Makefile.in.patch  0008-headers-Declare-RtlIsEcCode-helper-when-building-for.patch  0009-headers-Use-aarch64-TEB-accessors-for-ARM64EC.patch  0010-headers-Use-aarch64-math-function-variants-for-ARM64.patch  0011-CRT_fp10-Use-aarch64-fenv-function-variants-for-ARM6.patch  0012-math-Use-aarch64-function-variants-for-ARM64EC.patch  0013-fenv-Use-aarch64-function-variants-for-ARM64EC.patch  0014-strtopx-Use-aarch64-function-variant-for-ARM64EC.patch  0022-configure-ARM64EC-build-support.patch  (+15 more)
src/: restore.ts
test/: CMakeLists.txt  Makefile  crt-test.c  fortify.c  headers.cpp  test-cl.sh  test-clang-cl-cmds.sh  test-clang-cl.sh  test-meson-clang-cl.sh
tests/checkasm/: CMakeLists.txt
wrappers/: clang-target-wrapper.c  ld-wrapper.sh  wine-msvc.sh
(+2 files in other folders)
