add_compile_definitions(HAVE_AV_CONFIG_H)
include_directories(.)
set(avcodec_src
    012v.c
    4xm.c
    8bps.c
    8svx.c
    a64multienc.c
    aac/aacdec.c
    aac/aacdec_ac.c
    aac/aacdec_fixed.c
    aac/aacdec_float.c
    aac/aacdec_lpd.c
    aac/aacdec_tab.c
    aac/aacdec_usac.c
    aac_ac3_parser.c
    aac_parser.c
    aaccoder.c
    aacenc.c
    aacenc_is.c
    aacenc_ltp.c
    aacenc_pred.c
    aacenc_tns.c
    aacenctab.c
    aacps_common.c
    aacps_fixed.c
    aacps_float.c
    aacpsdsp_fixed.c
    aacpsdsp_float.c
    aacpsy.c
    aacsbr.c
    aacsbr_fixed.c
    aactab.c
    aandcttab.c
    aasc.c
    ac3.c
    ac3_channel_layout_tab.c
    ac3_parser.c
    ac3dec_data.c
    ac3dec_fixed.c
    ac3dec_float.c
    ac3dsp.c
    ac3enc.c
    ac3enc_fixed.c
    ac3enc_float.c
    ac3tab.c
    acelp_filters.c
    acelp_pitch_delay.c
    acelp_vectors.c
    adpcm.c
    adpcm_data.c
    adpcmenc.c
    adts_header.c
    adts_parser.c
    adx.c
    adx_parser.c
    adxdec.c
    adxenc.c
    agm.c
    aic.c
    alac.c
    alac_data.c
    alacdsp.c
    alacenc.c
    aliaspixdec.c
    aliaspixenc.c
    allcodecs.c
    alsdec.c
    amr_parser.c
    amrnbdec.c
    amrwbdec.c
    anm.c
    ansi.c
    aom_film_grain.c
    apac.c
    apedec.c
    aptx.c
    aptxdec.c
    aptxenc.c
    arbc.c
    argo.c
    ass.c
    ass_split.c
    assdec.c
    assenc.c
    asv.c
    asvdec.c
    asvenc.c
    atrac.c
    atrac1.c
    atrac3.c
    atrac3plus.c
    atrac3plusdec.c
    atrac3plusdsp.c
    atrac9dec.c
    atsc_a53.c
    audio_frame_queue.c
    audiodsp.c
    aura.c
    av1_levels.c
    av1_parse.c
    av1_parser.c
    av1dec.c
    avcodec.c
    avdct.c
    avfft.c
    avrndec.c
    avs.c
    avs2.c
    avs2_parser.c
    avs3_parser.c
    avuidec.c
    avuienc.c
    bethsoftvideo.c
    bfi.c
    bgmc.c
    bink.c
    binkaudio.c
    binkdsp.c
    bintext.c
    bitpacked_dec.c
    bitpacked_enc.c
    bitstream.c
    bitstream_filters.c
    blockdsp.c
    bmp.c
    bmp_parser.c
    bmpenc.c
    bmvaudio.c
    bmvvideo.c
    bonk.c
    brenderpix.c
    bsf.c
    bsf/aac_adtstoasc.c
    bsf/av1_frame_merge.c
    bsf/av1_frame_split.c
    bsf/av1_metadata.c
    bsf/chomp.c
    bsf/dca_core.c
    bsf/dovi_rpu.c
    bsf/dts2pts.c
    bsf/dump_extradata.c
    bsf/dv_error_marker.c
    bsf/eac3_core.c
    bsf/evc_frame_merge.c
    bsf/extract_extradata.c
    bsf/filter_units.c
    bsf/h264_metadata.c
    bsf/h264_mp4toannexb.c
    bsf/h264_redundant_pps.c
    bsf/h265_metadata.c
    bsf/h266_metadata.c
    bsf/hapqa_extract.c
    bsf/hevc_mp4toannexb.c
    bsf/imx_dump_header.c
    bsf/media100_to_mjpegb.c
    bsf/mjpeg2jpeg.c
    bsf/mjpega_dump_header.c
    bsf/movsub.c
    bsf/mpeg2_metadata.c
    bsf/mpeg4_unpack_bframes.c
    bsf/noise.c
    bsf/null.c
    bsf/opus_metadata.c
    bsf/pcm_rechunk.c
    bsf/pgs_frame_merge.c
    bsf/prores_metadata.c
    bsf/remove_extradata.c
    bsf/setts.c
    bsf/showinfo.c
    bsf/trace_headers.c
    bsf/truehd_core.c
    bsf/vp9_metadata.c
    bsf/vp9_raw_reorder.c
    bsf/vp9_superframe.c
    bsf/vp9_superframe_split.c
    bsf/vvc_mp4toannexb.c
    bswapdsp.c
    c93.c
    cabac.c
    canopus.c
    cavs.c
    cavs_parser.c
    cavsdata.c
    cavsdec.c
    cavsdsp.c
    cbrt_data.c
    cbrt_data_fixed.c
    cbs.c
    cbs_av1.c
    cbs_bsf.c
    cbs_h2645.c
    cbs_jpeg.c
    cbs_mpeg2.c
    cbs_sei.c
    cbs_vp8.c
    cbs_vp9.c
    ccaption_dec.c
    cdgraphics.c
    cdtoons.c
    cdxl.c
    celp_filters.c
    celp_math.c
    cfhd.c
    cfhddata.c
    cfhddsp.c
    cfhdenc.c
    cfhdencdsp.c
    cga_data.c
    cinepak.c
    cinepakenc.c
    clearvideo.c
    cljrdec.c
    cljrenc.c
    cllc.c
    cngdec.c
    cngenc.c
    codec_desc.c
    codec_par.c
    container_fifo.c
    cook.c
    cook_parser.c
    cpia.c
    cri.c
    cri_parser.c
    cscd.c
    cyuv.c
    dca.c
    dca_core.c
    dca_exss.c
    dca_lbr.c
    dca_parser.c
    dca_sample_rate_tab.c
    dca_xll.c
    dcaadpcm.c
    dcadata.c
    dcadct.c
    dcadec.c
    dcadsp.c
    dcaenc.c
    dcahuff.c
    dct32_fixed.c
    dct32_float.c
    dds.c
    decode.c
    dfa.c
    dfpwmdec.c
    dfpwmenc.c
    dirac.c
    dirac_arith.c
    dirac_dwt.c
    dirac_parser.c
    dirac_vlc.c
    diracdec.c
    diracdsp.c
    diractab.c
    dnxhd_parser.c
    dnxhddata.c
    dnxhddec.c
    dnxhdenc.c
    dolby_e.c
    dolby_e_parse.c
    dolby_e_parser.c
    dovi_rpu.c
    dovi_rpudec.c
    dovi_rpuenc.c
    dpcm.c
    dpx.c
    dpx_parser.c
    dpxenc.c
    dsd.c
    dsddec.c
    dsicinaudio.c
    dsicinvideo.c
    dss_sp.c
    dstdec.c
    dv.c
    dv_profile.c
    dvaudio_parser.c
    dvaudiodec.c
    dvbsub_parser.c
    dvbsubdec.c
    dvbsubenc.c
    dvd_nav_parser.c
    dvdata.c
    dvdec.c
    dvdsub.c
    dvdsub_parser.c
    dvdsubdec.c
    dvdsubenc.c
    dvenc.c
    dxtory.c
    dxv.c
    dxvenc.c
    dynamic_hdr_vivid.c
    eac3_data.c
    eac3enc.c
    eacmv.c
    eaidct.c
    eamad.c
    eatgq.c
    eatgv.c
    eatqi.c
    elbg.c
    elsdec.c
    encode.c
    error_resilience.c
    escape124.c
    escape130.c
    evc_parse.c
    evc_parser.c
    evc_ps.c
    evrcdec.c
    executor.c
    exif.c
    exrdsp.c
    faandct.c
    faanidct.c
    fastaudio.c
    faxcompr.c
    fdctdsp.c
    ffv1.c
    ffv1dec.c
    ffv1enc.c
    ffwavesynth.c
    fic.c
    fits.c
    fitsdec.c
    fitsenc.c
    flac.c
    flac_parser.c
    flacdata.c
    flacdec.c
    flacdsp.c
    flacenc.c
    flacencdsp.c
    flicvideo.c
    float2half.c
    flvdec.c
    flvenc.c
    fmtconvert.c
    fmvc.c
    frame_thread_encoder.c
    fraps.c
    frwu.c
    ftr.c
    ftr_parser.c
    g722.c
    g722dec.c
    g722dsp.c
    g722enc.c
    g723_1.c
    g723_1_parser.c
    g723_1dec.c
    g723_1enc.c
    g726.c
    g729_parser.c
    g729dec.c
    g729postfilter.c
    gdv.c
    gemdec.c
    get_buffer.c
    gif.c
    gif_parser.c
    gifdec.c
    golomb.c
    gsm_parser.c
    gsmdec.c
    gsmdec_data.c
    h261.c
    h261_parser.c
    h261data.c
    h261dec.c
    h261enc.c
    h263.c
    h263_parser.c
    h263data.c
    h263dec.c
    h263dsp.c
    h2645_parse.c
    h2645_sei.c
    h2645_vui.c
    h2645data.c
    h264_cabac.c
    h264_cavlc.c
    h264_direct.c
    h264_levels.c
    h264_loopfilter.c
    h264_mb.c
    h264_parse.c
    h264_parser.c
    h264_picture.c
    h264_ps.c
    h264_refs.c
    h264_sei.c
    h264_slice.c
    h264chroma.c
    h264data.c
    h264dec.c
    h264dsp.c
    h264idct.c
    h264pred.c
    h264qpel.c
    h265_profile_level.c
    h274.c
    half2float.c
    hap.c
    hapdec.c
    hcadec.c
    hcom.c
    hdr_parser.c
    hdrdec.c
    hdrenc.c
    hevc/cabac.c
    hevc/data.c
    hevc/dsp.c
    hevc/filter.c
    hevc/hevcdec.c
    hevc/mvs.c
    hevc/parse.c
    hevc/parser.c
    hevc/pred.c
    hevc/ps.c
    hevc/ps_enc.c
    hevc/refs.c
    hevc/sei.c
    hnm4video.c
    hpeldsp.c
    hq_hqa.c
    hq_hqadsp.c
    hqx.c
    hqxdsp.c
    hqxvlc.c
    htmlsubtitles.c
    huffman.c
    huffyuv.c
    huffyuvdec.c
    huffyuvdsp.c
    huffyuvenc.c
    huffyuvencdsp.c
    hw_base_encode.c
    hw_base_encode_h264.c
    hw_base_encode_h265.c
    idcinvideo.c
    idctdsp.c
    iff.c
    iirfilter.c
    ilbcdec.c
    imc.c
    imgconvert.c
    imm4.c
    imm5.c
    imx.c
    indeo2.c
    indeo3.c
    indeo4.c
    indeo5.c
    intelh263dec.c
    interplayacm.c
    interplayvideo.c
    intrax8.c
    intrax8dsp.c
    ipu_parser.c
    ituh263dec.c
    ituh263enc.c
    ivi.c
    ivi_dsp.c
    j2kenc.c
    jacosubdec.c
    jfdctfst.c
    jfdctint.c
    jni.c
    jpeg2000.c
    jpeg2000_parser.c
    jpeg2000dec.c
    jpeg2000dsp.c
    jpeg2000dwt.c
    jpeg2000htdec.c
    jpegls.c
    jpeglsdec.c
    jpeglsenc.c
    jpegquanttables.c
    jpegtables.c
    jpegxl_parse.c
    jpegxl_parser.c
    jrevdct.c
    jvdec.c
    kbdwin.c
    kgv1dec.c
    kmvc.c
    lagarith.c
    lagarithrac.c
    latm_parser.c
    lcevcdec.c
    lcldec.c
    leaddec.c
    ljpegenc.c
    loco.c
    lossless_audiodsp.c
    lossless_videodsp.c
    lossless_videoencdsp.c
    lpc.c
    lsp.c
    lzf.c
    lzw.c
    lzwenc.c
    m101.c
    mace.c
    magicyuv.c
    magicyuvenc.c
    mathtables.c
    mdec.c
    me_cmp.c
    metasound.c
    microdvddec.c
    midivid.c
    mimic.c
    misc4.c
    misc4_parser.c
    mjpeg_parser.c
    mjpegbdec.c
    mjpegdec.c
    mjpegdec_common.c
    mjpegenc.c
    mjpegenc_common.c
    mjpegenc_huffman.c
    mlp.c
    mlp_parse.c
    mlp_parser.c
    mlpdec.c
    mlpdsp.c
    mlpenc.c
    mlz.c
    mmvideo.c
    mobiclip.c
    motion_est.c
    motionpixels.c
    movtextdec.c
    movtextenc.c
    mpc.c
    mpc7.c
    mpc8.c
    mpeg12.c
    mpeg12data.c
    mpeg12dec.c
    mpeg12enc.c
    mpeg12framerate.c
    mpeg4audio.c
    mpeg4audio_sample_rates.c
    mpeg4video.c
    mpeg4video_parser.c
    mpeg4videodec.c
    mpeg4videodsp.c
    mpeg4videoenc.c
    mpeg_er.c
    mpegaudio.c
    mpegaudio_parser.c
    mpegaudiodata.c
    mpegaudiodec_common.c
    mpegaudiodec_fixed.c
    mpegaudiodec_float.c
    mpegaudiodecheader.c
    mpegaudiodsp.c
    mpegaudiodsp_data.c
    mpegaudiodsp_fixed.c
    mpegaudiodsp_float.c
    mpegaudioenc_fixed.c
    mpegaudioenc_float.c
    mpegaudiotabs.c
    mpegpicture.c
    mpegutils.c
    mpegvideo.c
    mpegvideo_dec.c
    mpegvideo_enc.c
    mpegvideo_motion.c
    mpegvideo_parser.c
    mpegvideodata.c
    mpegvideoencdsp.c
    mpl2dec.c
    mqc.c
    mqcdec.c
    mqcenc.c
    msgsmdec.c
    msmpeg4.c
    msmpeg4_vc1_data.c
    msmpeg4data.c
    msmpeg4dec.c
    msmpeg4enc.c
    msp2dec.c
    msrle.c
    msrledec.c
    msrleenc.c
    mss1.c
    mss12.c
    mss2.c
    mss2dsp.c
    mss3.c
    mss34dsp.c
    mss4.c
    msvideo1.c
    msvideo1enc.c
    mv30.c
    mvcdec.c
    mxpegdec.c
    nellymoser.c
    nellymoserdec.c
    nellymoserenc.c
    notchlc.c
    null.c
    nuv.c
    on2avc.c
    on2avcdata.c
    options.c
    opus/celt.c
    opus/dec.c
    opus/dec_celt.c
    opus/dsp.c
    opus/enc.c
    opus/enc_psy.c
    opus/parse.c
    opus/parser.c
    opus/pvq.c
    opus/rc.c
    opus/silk.c
    opus/tab.c
    osq.c
    packet.c
    pafaudio.c
    pafvideo.c
    pamenc.c
    parser.c
    parsers.c
    pcm-bluray.c
    pcm-blurayenc.c
    pcm-dvd.c
    pcm-dvdenc.c
    pcm.c
    pcx.c
    pcxenc.c
    pgssubdec.c
    pgxdec.c
    photocd.c
    pictordec.c
    pixblockdsp.c
    pixlet.c
    png.c
    png_parser.c
    pngdsp.c
    pnm.c
    pnm_parser.c
    pnmdec.c
    pnmenc.c
    profiles.c
    proresdata.c
    proresdec.c
    proresdsp.c
    proresenc_anatoliy.c
    proresenc_kostya.c
    prosumer.c
    psd.c
    psymodel.c
    pthread.c
    pthread_frame.c
    pthread_slice.c
    ptx.c
    qcelpdec.c
    qdm2.c
    qdmc.c
    qdrw.c
    qoadec.c
    qoi_parser.c
    qoidec.c
    qoienc.c
    qpeg.c
    qpeldsp.c
    qtrle.c
    qtrleenc.c
    r210dec.c
    r210enc.c
    ra144.c
    ra144dec.c
    ra144enc.c
    ra288.c
    ralf.c
    rangecoder.c
    ratecontrol.c
    raw.c
    rawdec.c
    rawenc.c
    realtextdec.c
    refstruct.c
    rka.c
    rl.c
    rl2.c
    rle.c
    roqaudioenc.c
    roqvideo.c
    roqvideodec.c
    roqvideoenc.c
    rpza.c
    rpzaenc.c
    rtjpeg.c
    rtv1.c
    rv10.c
    rv10enc.c
    rv20enc.c
    rv30.c
    rv30dsp.c
    rv34.c
    rv34_parser.c
    rv34dsp.c
    rv40.c
    rv40dsp.c
    s302m.c
    s302menc.c
    samidec.c
    sanm.c
    sbc.c
    sbc_parser.c
    sbcdec.c
    sbcdec_data.c
    sbcdsp.c
    sbcdsp_data.c
    sbcenc.c
    sbrdsp.c
    sbrdsp_fixed.c
    scpr.c
    sga.c
    sgidec.c
    sgienc.c
    sgirledec.c
    sheervideo.c
    shorten.c
    simple_idct.c
    sinewin.c
    sipr.c
    sipr16k.c
    sipr_parser.c
    siren.c
    smacker.c
    smc.c
    smcenc.c
    snappy.c
    snow.c
    snow_dwt.c
    snowdec.c
    snowenc.c
    sonic.c
    sp5xdec.c
    speedhq.c
    speedhqdec.c
    speedhqenc.c
    speexdec.c
    srtdec.c
    srtenc.c
    startcode.c
    subviewerdec.c
    sunrast.c
    sunrastenc.c
    svq1.c
    svq1dec.c
    svq1enc.c
    svq3.c
    synth_filter.c
    tak.c
    tak_parser.c
    takdec.c
    takdsp.c
    targa.c
    targa_y216dec.c
    targaenc.c
    textdec.c
    texturedsp.c
    texturedspenc.c
    threadprogress.c
    tiertexseqv.c
    tiff.c
    tiff_common.c
    tiffenc.c
    tmv.c
    to_upper4.c
    tpeldsp.c
    truemotion1.c
    truemotion2.c
    truemotion2rt.c
    truespeech.c
    tscc2.c
    tta.c
    ttadata.c
    ttadsp.c
    ttaenc.c
    ttaencdsp.c
    ttmlenc.c
    twinvq.c
    twinvqdec.c
    txd.c
    ulti.c
    utils.c
    utvideodec.c
    utvideodsp.c
    utvideoenc.c
    v210dec.c
    v210enc.c
    v210x.c
    v308dec.c
    v308enc.c
    v408dec.c
    v408enc.c
    v410dec.c
    v410enc.c
    vb.c
    vble.c
    vbndec.c
    vbnenc.c
    vc1.c
    vc1_block.c
    vc1_loopfilter.c
    vc1_mc.c
    vc1_parser.c
    vc1_pred.c
    vc1data.c
    vc1dec.c
    vc1dsp.c
    vc2enc.c
    vc2enc_dwt.c
    vcr1.c
    version.c
    videodsp.c
    vima.c
    vlc.c
    vmdaudio.c
    vmdvideo.c
    vmixdec.c
    vmnc.c
    vorbis.c
    vorbis_data.c
    vorbis_parser.c
    vorbisdec.c
    vorbisdsp.c
    vorbisenc.c
    vp3.c
    vp3_parser.c
    vp3dsp.c
    vp5.c
    vp56.c
    vp56data.c
    vp56dsp.c
    vp6.c
    vp6dsp.c
    vp8.c
    vp8_parser.c
    vp8data.c
    vp8dsp.c
    vp9.c
    vp9_parser.c
    vp9block.c
    vp9data.c
    vp9dsp.c
    vp9dsp_10bpp.c
    vp9dsp_12bpp.c
    vp9dsp_8bpp.c
    vp9lpf.c
    vp9mvs.c
    vp9prob.c
    vp9recon.c
    vpx_rac.c
    vqavideo.c
    vqcdec.c
    vvc/cabac.c
    vvc/ctu.c
    vvc/data.c
    vvc/dec.c
    vvc/dsp.c
    vvc/filter.c
    vvc/inter.c
    vvc/intra.c
    vvc/intra_utils.c
    vvc/itx_1d.c
    vvc/mvs.c
    vvc/ps.c
    vvc/refs.c
    vvc/thread.c
    vvc_parser.c
    wavarc.c
    wavpack.c
    wavpackdata.c
    wavpackenc.c
    wbmpdec.c
    wbmpenc.c
    webp.c
    webp_parser.c
    webvttdec.c
    webvttenc.c
    wma.c
    wma_common.c
    wma_freqs.c
    wmadec.c
    wmaenc.c
    wmalosslessdec.c
    wmaprodec.c
    wmavoice.c
    wmv2.c
    wmv2data.c
    wmv2dec.c
    wmv2dsp.c
    wmv2enc.c
    wnv1.c
    wrapped_avframe.c
    ws-snd1.c
    xan.c
    xbm_parser.c
    xbmdec.c
    xbmenc.c
    xface.c
    xfacedec.c
    xfaceenc.c
    xiph.c
    xl.c
    xma_parser.c
    xpmdec.c
    xsubdec.c
    xsubenc.c
    xvididct.c
    xwd_parser.c
    xwddec.c
    xwdenc.c
    xxan.c
    y41pdec.c
    y41penc.c
    ylc.c
    yop.c
    yuv4dec.c
    yuv4enc.c)
if (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
  list(APPEND avcodec_src
      aarch64/aacpsdsp_init_aarch64.c
      aarch64/aacpsdsp_neon.S
      aarch64/ac3dsp_init_aarch64.c
      aarch64/ac3dsp_neon.S
      aarch64/fdctdsp_init_aarch64.c
      aarch64/fdctdsp_neon.S
      aarch64/fmtconvert_init.c
      aarch64/fmtconvert_neon.S
      aarch64/h264chroma_init_aarch64.c
      aarch64/h264cmc_neon.S
      aarch64/h264dsp_init_aarch64.c
      aarch64/h264dsp_neon.S
      aarch64/h264idct_neon.S
      aarch64/h264pred_init.c
      aarch64/h264pred_neon.S
      aarch64/h264qpel_init_aarch64.c
      aarch64/h264qpel_neon.S
      aarch64/h26x/epel_neon.S
      aarch64/h26x/qpel_neon.S
      aarch64/h26x/sao_neon.S
      aarch64/hevcdsp_deblock_neon.S
      aarch64/hevcdsp_idct_neon.S
      aarch64/hevcdsp_init_aarch64.c
      aarch64/hpeldsp_init_aarch64.c
      aarch64/hpeldsp_neon.S
      aarch64/idctdsp_init_aarch64.c
      aarch64/idctdsp_neon.S
      aarch64/me_cmp_init_aarch64.c
      aarch64/me_cmp_neon.S
      aarch64/mpegaudiodsp_init.c
      aarch64/mpegaudiodsp_neon.S
      aarch64/mpegvideoencdsp_init.c
      aarch64/mpegvideoencdsp_neon.S
      aarch64/neontest.c
      aarch64/opusdsp_init.c
      aarch64/opusdsp_neon.S
      aarch64/pixblockdsp_init_aarch64.c
      aarch64/pixblockdsp_neon.S
      aarch64/rv40dsp_init_aarch64.c
      aarch64/sbrdsp_init_aarch64.c
      aarch64/sbrdsp_neon.S
      aarch64/simple_idct_neon.S
      aarch64/synth_filter_init.c
      aarch64/synth_filter_neon.S
      aarch64/vc1dsp_init_aarch64.c
      aarch64/vc1dsp_neon.S
      aarch64/videodsp.S
      aarch64/videodsp_init.c
      aarch64/vorbisdsp_init.c
      aarch64/vorbisdsp_neon.S
      aarch64/vp8dsp_init_aarch64.c
      aarch64/vp8dsp_neon.S
      aarch64/vp9dsp_init_10bpp_aarch64.c
      aarch64/vp9dsp_init_12bpp_aarch64.c
      aarch64/vp9dsp_init_aarch64.c
      aarch64/vp9itxfm_16bpp_neon.S
      aarch64/vp9itxfm_neon.S
      aarch64/vp9lpf_16bpp_neon.S
      aarch64/vp9lpf_neon.S
      aarch64/vp9mc_16bpp_neon.S
      aarch64/vp9mc_aarch64.S
      aarch64/vp9mc_neon.S
      aarch64/vvc/alf.S
      aarch64/vvc/dsp_init.c
      aarch64/vvc/inter.S
      aarch64/vvc/sad.S
      neon/mpegvideo.c)
elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL "arm")
  list(APPEND avcodec_src
      arm/aacpsdsp_init_arm.c
      arm/aacpsdsp_neon.S
      arm/ac3dsp_arm.S
      arm/ac3dsp_armv6.S
      arm/ac3dsp_init_arm.c
      arm/ac3dsp_neon.S
      arm/audiodsp_init_arm.c
      arm/audiodsp_init_neon.c
      arm/audiodsp_neon.S
      arm/blockdsp_init_arm.c
      arm/blockdsp_init_neon.c
      arm/blockdsp_neon.S
      arm/flacdsp_arm.S
      arm/flacdsp_init_arm.c
      arm/fmtconvert_init_arm.c
      arm/fmtconvert_neon.S
      arm/fmtconvert_vfp.S
      arm/g722dsp_init_arm.c
      arm/g722dsp_neon.S
      arm/h264chroma_init_arm.c
      arm/h264cmc_neon.S
      arm/h264dsp_init_arm.c
      arm/h264dsp_neon.S
      arm/h264idct_neon.S
      arm/h264pred_init_arm.c
      arm/h264pred_neon.S
      arm/h264qpel_init_arm.c
      arm/h264qpel_neon.S
      arm/hevcdsp_deblock_neon.S
      arm/hevcdsp_idct_neon.S
      arm/hevcdsp_init_arm.c
      arm/hevcdsp_init_neon.c
      arm/hevcdsp_qpel_neon.S
      arm/hevcdsp_sao_neon.S
      arm/hpeldsp_arm.S
      arm/hpeldsp_armv6.S
      arm/hpeldsp_init_arm.c
      arm/hpeldsp_init_armv6.c
      arm/hpeldsp_init_neon.c
      arm/hpeldsp_neon.S
      arm/idctdsp_arm.S
      arm/idctdsp_armv6.S
      arm/idctdsp_init_arm.c
      arm/idctdsp_init_armv5te.c
      arm/idctdsp_init_armv6.c
      arm/idctdsp_init_neon.c
      arm/idctdsp_neon.S
      arm/int_neon.S
      arm/jrevdct_arm.S
      arm/lossless_audiodsp_init_arm.c
      arm/lossless_audiodsp_neon.S
      arm/me_cmp_armv6.S
      arm/me_cmp_init_arm.c
      arm/mlpdsp_armv5te.S
      arm/mlpdsp_armv6.S
      arm/mlpdsp_init_arm.c
      arm/mpegaudiodsp_fixed_armv6.S
      arm/mpegaudiodsp_init_arm.c
      arm/mpegvideo_arm.c
      arm/mpegvideo_armv5te.c
      arm/mpegvideo_armv5te_s.S
      arm/mpegvideo_neon.S
      arm/mpegvideoencdsp_armv6.S
      arm/mpegvideoencdsp_init_arm.c
      arm/neontest.c
      arm/pixblockdsp_armv6.S
      arm/pixblockdsp_init_arm.c
      arm/pixblockdsp_neon.S
      arm/rv34dsp_init_arm.c
      arm/rv34dsp_neon.S
      arm/rv40dsp_init_arm.c
      arm/rv40dsp_neon.S
      arm/sbcdsp_armv6.S
      arm/sbcdsp_init_arm.c
      arm/sbcdsp_neon.S
      arm/sbrdsp_init_arm.c
      arm/sbrdsp_neon.S
      arm/simple_idct_arm.S
      arm/simple_idct_armv5te.S
      arm/simple_idct_armv6.S
      arm/simple_idct_neon.S
      arm/startcode_armv6.S
      arm/synth_filter_init_arm.c
      arm/synth_filter_neon.S
      arm/synth_filter_vfp.S
      arm/vc1dsp_init_arm.c
      arm/vc1dsp_init_neon.c
      arm/vc1dsp_neon.S
      arm/videodsp_armv5te.S
      arm/videodsp_init_arm.c
      arm/videodsp_init_armv5te.c
      arm/vorbisdsp_init_arm.c
      arm/vorbisdsp_neon.S
      arm/vp3dsp_init_arm.c
      arm/vp3dsp_neon.S
      arm/vp6dsp_init_arm.c
      arm/vp6dsp_neon.S
      arm/vp8_armv6.S
      arm/vp8dsp_armv6.S
      arm/vp8dsp_init_arm.c
      arm/vp8dsp_init_armv6.c
      arm/vp8dsp_init_neon.c
      arm/vp8dsp_neon.S
      arm/vp9dsp_init_10bpp_arm.c
      arm/vp9dsp_init_12bpp_arm.c
      arm/vp9dsp_init_arm.c
      arm/vp9itxfm_16bpp_neon.S
      arm/vp9itxfm_neon.S
      arm/vp9lpf_16bpp_neon.S
      arm/vp9lpf_neon.S
      arm/vp9mc_16bpp_neon.S
      arm/vp9mc_neon.S)
elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "i386")
  list(APPEND avcodec_src
      x86/aacencdsp_init.c
      x86/aacpsdsp_init.c
      x86/ac3dsp_init.c
      x86/alacdsp_init.c
      x86/audiodsp_init.c
      x86/blockdsp_init.c
      x86/bswapdsp_init.c
      x86/cavsdsp.c
      x86/celt_pvq_init.c
      x86/cfhddsp_init.c
      x86/cfhdencdsp_init.c
      x86/constants.c
      x86/dcadsp_init.c
      x86/dirac_dwt_init.c
      x86/diracdsp_init.c
      x86/dnxhdenc_init.c
      x86/exrdsp_init.c
      x86/fdct.c
      x86/fdctdsp_init.c
      x86/flacdsp_init.c
      x86/flacencdsp_init.c
      x86/fmtconvert_init.c
      x86/g722dsp_init.c
      x86/h263dsp_init.c
      x86/h264_intrapred_init.c
      x86/h264_qpel.c
      x86/h264chroma_init.c
      x86/h264dsp_init.c
      x86/h26x/h2656dsp.c
      x86/hevcdsp_init.c
      x86/hpeldsp_init.c
      x86/huffyuvdsp_init.c
      x86/huffyuvencdsp_init.c
      x86/idctdsp_init.c
      x86/jpeg2000dsp_init.c
      x86/lossless_audiodsp_init.c
      x86/lossless_videodsp_init.c
      x86/lossless_videoencdsp_init.c
      x86/lpc_init.c
      x86/me_cmp_init.c
      x86/mlpdsp_init.c
      x86/mpeg4videodsp.c
      x86/mpegaudiodsp.c
      x86/mpegvideo.c
      x86/mpegvideoenc.c
      x86/mpegvideoencdsp_init.c
      x86/opusdsp_init.c
      x86/pixblockdsp_init.c
      x86/pngdsp_init.c
      x86/proresdsp_init.c
      x86/qpeldsp_init.c
      x86/rv34dsp_init.c
      x86/rv40dsp_init.c
      x86/sbcdsp_init.c
      x86/sbrdsp_init.c
      x86/snowdsp.c
      x86/svq1enc_init.c
      x86/synth_filter_init.c
      x86/takdsp_init.c
      x86/ttadsp_init.c
      x86/ttaencdsp_init.c
      x86/utvideodsp_init.c
      x86/v210-init.c
      x86/v210enc_init.c
      x86/vc1dsp_init.c
      x86/vc1dsp_mmx.c
      x86/videodsp_init.c
      x86/vorbisdsp_init.c
      x86/vp3dsp_init.c
      x86/vp6dsp_init.c
      x86/vp8dsp_init.c
      x86/vp9dsp_init.c
      x86/vp9dsp_init_10bpp.c
      x86/vp9dsp_init_12bpp.c
      x86/vp9dsp_init_16bpp.c
      x86/vvc/vvcdsp_init.c
      x86/xvididct_init.c)
  if (CMAKE_ASM_NASM_COMPILER)
    set(x86_nasm_sources
        x86/aacencdsp.asm
        x86/aacpsdsp.asm
        x86/ac3dsp.asm
        x86/ac3dsp_downmix.asm
        x86/alacdsp.asm
        x86/audiodsp.asm
        x86/blockdsp.asm
        x86/bswapdsp.asm
        x86/cavsidct.asm
        x86/celt_pvq_search.asm
        x86/cfhddsp.asm
        x86/cfhdencdsp.asm
        x86/dcadsp.asm
        x86/dct32.asm x86/imdct36.asm
        x86/dirac_dwt.asm
        x86/diracdsp.asm
        x86/dnxhdenc.asm
        x86/exrdsp.asm
        x86/flac_dsp_gpl.asm
        x86/flacdsp.asm
        x86/fmtconvert.asm
        x86/fpel.asm
        x86/g722dsp.asm
        x86/h263_loopfilter.asm
        x86/h264_chromamc.asm
        x86/h264_chromamc_10bit.asm
        x86/h264_deblock.asm
        x86/h264_deblock_10bit.asm
        x86/h264_idct.asm
        x86/h264_idct_10bit.asm
        x86/h264_intrapred.asm
        x86/h264_intrapred_10bit.asm
        x86/h264_qpel_10bit.asm
        x86/h264_qpel_8bit.asm
        x86/h264_weight.asm
        x86/h264_weight_10bit.asm
        x86/h26x/h2656_inter.asm
        x86/hevc_add_res.asm
        x86/hevc_deblock.asm
        x86/hevc_idct.asm
        x86/hevc_mc.asm
        x86/hevc_sao.asm
        x86/hevc_sao_10bit.asm
        x86/hpeldsp.asm
        x86/huffyuvdsp.asm
        x86/huffyuvencdsp.asm
        x86/idctdsp.asm
        x86/jpeg2000dsp.asm
        x86/lossless_audiodsp.asm
        x86/lossless_videodsp.asm
        x86/lossless_videoencdsp.asm
        x86/lpc.asm
        x86/me_cmp.asm
        x86/mlpdsp.asm
        x86/mpegvideoencdsp.asm
        x86/opusdsp.asm
        x86/pixblockdsp.asm
        x86/pngdsp.asm
        x86/proresdsp.asm
        x86/qpel.asm
        x86/qpeldsp.asm
        x86/rv34dsp.asm
        x86/rv40dsp.asm
        x86/sbcdsp.asm
        x86/sbrdsp.asm
        x86/svq1enc.asm
        x86/synth_filter.asm
        x86/takdsp.asm
        x86/ttadsp.asm
        x86/ttaencdsp.asm
        x86/utvideodsp.asm
        x86/v210.asm
        x86/v210enc.asm
        x86/vc1dsp_loopfilter.asm
        x86/vc1dsp_mc.asm
        x86/videodsp.asm
        x86/vorbisdsp.asm
        x86/vp3dsp.asm
        x86/vp6dsp.asm
        x86/vp8dsp.asm
        x86/vp8dsp_loopfilter.asm
        x86/vp9intrapred.asm
        x86/vp9intrapred_16bpp.asm
        x86/vp9itxfm.asm
        x86/vp9itxfm_16bpp.asm
        x86/vp9lpf.asm
        x86/vp9lpf_16bpp.asm
        x86/vp9mc.asm
        x86/vp9mc_16bpp.asm
        x86/vvc/vvc_alf.asm
        x86/vvc/vvc_dmvr.asm
        x86/vvc/vvc_mc.asm
        x86/vvc/vvc_of.asm
        x86/vvc/vvc_sad.asm
        x86/xvididct.asm)
    if (CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
      list(APPEND x86_nasm_sources
          x86/simple_idct10.asm)
    else()
      list(APPEND x86_nasm_sources
          x86/simple_idct.asm)
    endif()
    list(APPEND avcodec_src
        ${x86_nasm_sources})
    set_source_files_properties(${x86_nasm_sources} PROPERTIES LANGUAGE ASM_NASM INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/x86)
  endif()
endif()
add_library(avcodec ${avcodec_src})
